--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <h4 class="text-uppercase mb-4">On Social Networks</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/tobias.canavesi"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/canavesitobias/"><i class="fab fa-fw fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/tob%C3%ADas-canavesi-357960191/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/tcanavesi"><i class="fab fa-fw fa-linkedin-in"></i></a>
                     </div>
                     <!-- Footer About Text-->
                 </div>
