--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/minery.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"> Working with the simulation and optimization team for water treatment for a Canadian mine </a> </p>
+                                    <p class="mb-5"> Working with the simulation and optimization team for water treatment for a Canadian mine </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
