--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Researcher- Teaching Assistant - Data Scientist</p>
+                <p class="masthead-subheading font-weight-light mb-0">Researcher - Data Scientist</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -89,7 +89,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cubos.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/airplane.jpg" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -209,7 +209,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © TC 2021</small></div>
+            <div class="container"><small>Copyright © TC 2022</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
@@ -296,7 +296,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Fractal Gravitation</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Demand Forecasting - Airline company</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -304,9 +304,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cubos.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/airplane.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Considering the GAIA data for about 1000000 stars around the barycenter, we estimate the fractal dimension for different regions in the Milky Way. Then we use those fractal dimensions to calculate the gravitational potential considering the medium as a continuous fractal. Finally, we use the gravitational potential to infer the circular velocity and adjust rotation curves in the Milky Way. For this, we use two numerical models, the first considering uniform density and a second more realistic of a bulge and a disk. In none of these models we consider dark matter. We study their validity comparing them with circular speed data from the Milky Way. <a href="http://www.astronomiaargentina.org.ar/b61b/2020BAAA...61B...136C.pdf"> Link!</a> </p>
+                                    <p class="mb-5">Design, implementation and evaluation of time series models. Forecast performance analysis.  Study on price elasticity of demand. </a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
