--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                  </div>
                         <!-- About Section Content-->
                  <div class="row">
-                         <a href="/assets/pdf/cv_english_new.pdf" download>
+                         <a href="/assets/pdf/cv_english.pdf" download>
                          <img src="assets/img/download-icon.png" alt="Resume" width="128" height="128">
                          </a>
                  </div>
