--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Tobías Canavesi is in love with mathematics, the universe and artificial intelligence. After finishing his degree in astronomy, he has become a PhD student in theoretical physics with a scholarship granted by the Argentine National Council of Scientific and Technical Research.</p></div>
-                     <div class="col-lg-4 ml-auto"><p class="lead">He enjoys working with people from different areas because he believes that multidisciplinary research is vital for the advancement of society. Some of his hobbies are playing and collecting retro games, programming, reading and imagining about the future.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead"> I consider myself in love with mathematics and the Universe. I have a bachelor degree in Astronomy and a PhD in theoretical physics. I also like technology (particularly AI). I did DS courses and i have experience working in important projects across various industries. </p></div>
+                     <div class="col-lg-4 ml-auto"><p class="lead"> I'm a versatile person, capable of adapting to any task or problem to solve. I enjoy working with people from different areas because i think that multidisciplinary collaboration is key to the advancement of society. </p></div>
                 </div>
                 <!-- About Section Button-->
             </div>
